服务端渲染优化

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prop-types": "^15.6.1",
     "query-string": "^6.0.0",
     "react": "^16.2.0",
+    "react-async-bootstrapper": "^2.1.1",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
