--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clear": "rimraf dist",
     "build": "npm run clear && npm run build:client && npm run build:server",
     "lint": "eslint --ext .js --ext .jsx clinet/",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "start": "cross-env NODE_ENV=production node server/server.js"
   },
   "author": "xjh",
   "license": "ISC",
@@ -20,8 +21,14 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "chalk": "^2.4.0",
+    "ejs": "^2.6.1",
+    "ejs-compiled-loader": "^1.1.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "jss": "^9.8.7",
+    "jss-preset-default": "^4.5.0",
+    "material-ui": "^1.0.0-beta.22",
+    "material-ui-icons": "^1.0.0-beta.36",
     "memory-fs": "^0.4.1",
     "mobx": "^4.1.1",
     "mobx-react": "^5.0.0",
@@ -30,8 +37,11 @@
     "react": "^16.2.0",
     "react-async-bootstrapper": "^2.1.1",
     "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
+    "react-jss": "^8.6.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "serialize-javascript": "^1.5.0",
     "serve-favicon": "^2.5.0",
     "webpack": "^4.1.1"
   },
